--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".compose.Remember"
             android:exported="true"
             android:theme="@style/Theme.AndroidSample" />
+        <activity
+            android:name=".compose.SideEffects"
+            android:exported="true"
+            android:theme="@style/Theme.AndroidSample" />
     </application>
 
 </manifest>
